--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,5 @@
 version: '3'
 services:
-  db:
-    image: postgres
   web:
     build: .
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
@@ -9,5 +7,7 @@ services:
       - .:/myapp
     ports:
       - "3000:3000"
-    depends_on:
-      - db
+    environment:
+      TZ: Asia/Tokyo
+      RAILS_ENV: 'development'
+      RACK_ENV: 'development'
